Fixes contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--primary-light);
+    background: linear-gradient(90deg, var(--primary-light), var(--primary));
     padding-block: 1rem;
     padding: 1rem 2rem;
     @media (width < 600px) {
@@ -705,13 +705,11 @@ footer p {
     .game-container:hover {
         transition: 0.6s ease-in-out;
         transform: translateY(-10px);
-        /* box-shadow: 17px 17px var(--dark); */
     }
 
     .cartridge-container:hover {
         transition: 0.6s ease-in-out;
-        transform: translateY(-10px);
-        box-shadow: 17px 17px var(--dark);
+        transform: scale(1.016);
     }
 
     /* .banner-content:hover {
